--- a/_data/work.yml
+++ b/_data/work.yml
@@ -6,7 +6,7 @@
   alt_text: City of Chicago Public Mark
   team: City of Chicago
   description: |
-    The City of Chicago is the third largest in the United States. I am its first Design Director, helping Chicago work better through community engagement for digital transformation. I am the first Design Director responsible for digital services and service delivery to the residents, businesses and visitors of the City of Chicago.
+    The City of Chicago is the third largest in the United States. I am its first Design Director, helping Chicago work better through digital transformation of information and service delivery with the community. 
   budget: $52 & lots of pro bono help
   project_timeframe: June 2018–January 2020
   tags: design system, web design system
