--- a/_data/work.yml
+++ b/_data/work.yml
@@ -1,66 +1,5 @@
-- title: Chicago Design System
-  id: 0
-  url: /work/cds
-  live: true
-  image: /img/work/chi/LOGO-CHICAGO-horizontal.png
-  logo: /img/work/chi/LOGO-CHICAGO-horizontal.png
-  alt_text: City of Chicago Public Mark
-  team: City of Chicago
-  description: |
-    The City of Chicago is the third largest in the United States. I am its first Design Director, helping Chicago work better through digital transformation of information and service delivery with the community. 
-  budget: $52 & lots of pro bono help
-  project_timeframe: June 2018–January 2020
-  tags: design system, web design system
-  role: Design Director, Creative Direction, HTML & CSS coding, UX writing, QA, product management, evangelism
-  role_timeframe: January 2018 to now
-  challenge: 
-    description: |
-      No definition of design standards enforced across departments or teams, leading to over 500 logos under management and over 200 applications with inconsistent, outdated standards, and money wasted defining and solving the same issues, over and over again. The piecemeal approach led to inaccessible, poorly translated systems, ugly systems not befitting the 3rd largest City in America. Mayor Rahm Emmanuel hated our dated digital brand. 
-    media:
-      - url: https://via.placeholder.com/800x600?text=screenshot of all the different logos and icons
-        type: image
-        alt_text: Screenshot of some Lorem ipsum?
-  research:
-    description: |
-      I began by reviewing the City's major technology programs, departments, and service delivery channels to understand what was in market and what design language it used to communicate. Along with inventorying our current state, we examined the branding efforts of other global cities to understand the benefits and pitfalls of different approaches. Finally, we examined the history and origin of Chicago's civic heraldry and neighborhood devices to place our work in the larger historical context, including interviews with the City's historian.
-      Comparative analysis, interface inventory, listening tour.
-    media:
-      - url: https://via.placeholder.com/800x600?text=lorem+ipsum
-        type: image
-        alt_text: Screenshot of some Lorem ipsum?
-  highlights:
-    description: |
-      After creating the 311 logo, we realized we needed additional expertise to shape the city's public identity. We pitched Ogilvy to help us on a pro bono basis, and they accepted.
-    media:
-      - url: /img/work/chi/cds-tradcom-solution-trans.png
-        type: image
-        caption: Traditional media chiron (in use), presentation, memo and business card templates.
-      - url: /img/work/chi/cds-new-media-solution-trans.png
-        type: image
-        caption: An upcoming Cannabis Legalization program illustrates the system today on Chicago home page, microsite, Facebook, Twitter, Instagram, and event messaging.
-  validation:
-    description: |
-      We validated the brand by sharing it publicly for comment in the fall of 2019. We received positive and critical feedback on accessibility and usage that helped us evolve the framework. We also piloted web projects with the system throughout 2019 with community users, university graduate students, and business partners to understand the barriers to adoption.
-    media:
-      - url: https://via.placeholder.com/800x600?text=lorem+ipsum
-        type: image
-        alt_text: Screenshot of some Lorem ipsum?
-  learnings:
-    description: |
-      We learned early on that that City didn't have a uniform marketing voice because it was no one's responsibility to enforce it. This led to a. 
-    media:
-      - url: https://via.placeholder.com/800x600?text=lorem+ipsum
-        type: image
-        alt_text: Screenshot of some Lorem ipsum?
-  results:
-    description: |
-      * text
-    media:
-      - url: https://via.placeholder.com/800x600?text=lorem+ipsum
-        type: image
-        alt_text: Screenshot of some Lorem ipsum?
 - title: 311 Modernization
-  id: 1
+  id: 0
   url: /work/311
   live: true
   image: /img/work/chi/CHI-311-logo.png
@@ -124,6 +63,67 @@
     description: |
       50k+ mobile application downloads, feature story in WIRED.
       * WIRED: [Chicago’s New 311 System is a Huge Win for Public Works](https://www.wired.com/story/chicago-311-huge-win-for-public-works/)
+- title: Chicago Design System
+  id: 1
+  url: /work/cds
+  live: true
+  image: /img/work/chi/LOGO-CHICAGO-horizontal.png
+  logo: /img/work/chi/LOGO-CHICAGO-horizontal.png
+  alt_text: City of Chicago Public Mark
+  team: City of Chicago
+  description: |
+    The City of Chicago is the third largest in the United States. I am its first Design Director, helping Chicago work better through digital transformation of information and service delivery with the community. 
+  budget: $52 & lots of pro bono help
+  project_timeframe: June 2018–January 2020
+  tags: design system, web design system
+  role: Design Director, Creative Direction, HTML & CSS coding, UX writing, QA, product management, evangelism
+  role_timeframe: January 2018 to now
+  challenge: 
+    description: |
+      No definition of design standards enforced across departments or teams, leading to over 500 logos under management and over 200 applications with inconsistent, outdated standards, and money wasted defining and solving the same issues, over and over again. The piecemeal approach led to inaccessible, poorly translated systems, ugly systems not befitting the 3rd largest City in America. Mayor Rahm Emmanuel hated our dated digital brand. 
+    media:
+      - url: https://via.placeholder.com/800x600?text=screenshot of all the different logos and icons
+        type: image
+        alt_text: Screenshot of some Lorem ipsum?
+  research:
+    description: |
+      I began by reviewing the City's major technology programs, departments, and service delivery channels to understand what was in market and what design language it used to communicate. Along with inventorying our current state, we examined the branding efforts of other global cities to understand the benefits and pitfalls of different approaches. Finally, we examined the history and origin of Chicago's civic heraldry and neighborhood devices to place our work in the larger historical context, including interviews with the City's historian.
+      Comparative analysis, interface inventory, listening tour.
+    media:
+      - url: /img/work/chi/cds-seals-research.png
+        type: image
+        caption: We researched 150 years of City of Chicago archives for examples of how the symbols of the city changed over time, and how they reflected communities' identity.
+  highlights:
+    description: |
+      After creating the 311 logo, we realized we needed additional expertise to shape the city's public identity. We pitched Ogilvy to help us on a pro bono basis, and they accepted.
+    media:
+      - url: /img/work/chi/cds-tradcom-solution-trans.png
+        type: image
+        caption: Traditional media chiron (in use), presentation, memo and business card templates.
+      - url: /img/work/chi/cds-new-media-solution-trans.png
+        type: image
+        caption: An upcoming Cannabis Legalization program illustrates the system today on Chicago home page, microsite, Facebook, Twitter, Instagram, and event messaging.
+  validation:
+    description: |
+      We validated the brand by sharing it publicly for comment in the fall of 2019. We received positive and critical feedback on accessibility and usage that helped us evolve the framework. We also piloted web projects with the system throughout 2019 with community users, university graduate students, and business partners to understand the barriers to adoption.
+    media:
+      - url: https://via.placeholder.com/800x600?text=lorem+ipsum
+        type: image
+        alt_text: Screenshot of some Lorem ipsum?
+  learnings:
+    description: |
+      We learned early on that that City didn't have a uniform marketing voice because it was no one's responsibility to enforce it. This led to a. 
+    media:
+      - url: https://via.placeholder.com/800x600?text=lorem+ipsum
+        type: image
+        alt_text: Screenshot of some Lorem ipsum?
+  results:
+    description: |
+      * text
+    media:
+      - url: https://via.placeholder.com/800x600?text=lorem+ipsum
+        type: image
+        alt_text: Screenshot of some Lorem ipsum?
 - title: Design Operations
   id: 2
   url: /work/desops
