cleaning up the look a bit

--- a/_data/work.yml
+++ b/_data/work.yml
@@ -13,7 +13,7 @@
   tags: {community, government, mobile, web, IVR, service app, design management of vendor teams, iOS application admin, accessibility tester, public roadmap maintainer, FAQ writer, UX protocol writer, bug filer, cheerleader, evangelist, designer}
   role: |
     Design Director
-  role_timeframe: January 2018 to now
+  role_timeframe: January 2018 – present
   solution: 
     description: |
       Use user experience methods to include resident voice in the product design process, transforming an analog and digital system into a pure digital workflow.
